# panda-gazebo

./: .alexignore  .buildinfo  .flake8  .gitignore  .gitmodules  .release-please-manifest.json  .remarkignore  .versionrc  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.noetic  README.md  TODO.md  TODOS.md  contributing.md  genindex.html  gripper_pid_tunner.slxc  index-msg.html  index.html  main.code-workspace  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  py-modindex.html  pyproject.toml  release-please-config.json  search.html  searchindex.js  setup.cfg  setup.py  version.py  workspace.code-workspace
.ci/: Dockerfile.noetic
panda_gazebo/: .bumpversion  .gitignore  CMakeLists.txt  README.md  TODOS.md  package.xml  requirements.txt  setup.cfg  setup.py
panda_gazebo/action/: FollowJointTrajectory.action
panda_gazebo/cfg/: env_config.yaml
panda_gazebo/cfg/_cfg/: parms_config.yaml
panda_gazebo/cfg/controllers/: arm_effort_joint_effort_control.yaml  arm_effort_joint_position_control.yaml  arm_effort_joint_trajectory_control.yaml  arm_position_joint_position_control.yaml  arm_position_joint_trajectory_control.yaml  effort_joint_trajectory_controller.yaml  effort_joint_trajectory_controllers.yaml  gazebo_ros_control.yaml  hand_effort_joint_effort_control.yaml  hand_effort_joint_position_control.yaml  hand_effort_joint_trajectory_control.yaml  hand_position_joint_position_control.yaml  hand_position_joint_trajectory_control.yaml  joint_effort_controllers.yaml  joint_group_effort_controller.yaml  joint_group_position_controller.yaml  joint_position_controllers.yaml  joint_state_control.yaml  joint_state_controller.yaml  joint_trajectory_controllers.yaml  moveit.yaml  moveit_ros_control.yaml  moveit_ros_control_gripper.yaml  panda_arm_effort_joint_effort_control.yaml  panda_arm_effort_joint_group_position_control.yaml  panda_arm_effort_joint_position_control.yaml  panda_arm_effort_joint_trajectory_control.yaml  panda_hand_effort_joint_effort_control.yaml  panda_hand_effort_joint_group_effort_control.yaml  panda_hand_effort_joint_group_position_control.yaml  panda_hand_effort_joint_trajectory_control.yaml  panda_joint_state_control.yaml  position_joint_trajectory_controllers.yaml  ros_control.yaml
panda_gazebo/cfg/dyn_reconf/: EffortControlTestDynReconf.cfg  EffortTestDynReconf.cfg  MoveitServerDynReconf.cfg  PositionControlTestDynReconf.cfg
panda_gazebo/docs/: Makefile
panda_gazebo/docs/source/: conf.py  index.rst
panda_gazebo/launch/: controllers.launch  demo_gazebo.launch  gazebo.launch  load_controllers copy.launch  load_controllers.launch  load_controllers.launch.xml  load_effort_joint_trajectory_controller.launch.xml  load_effort_joint_trajectory_controllers.launch  load_joint_effort_controllers.launch  load_joint_effort_controllers.launch.xml  load_joint_group_effort_controller.launch.xml  load_joint_group_position_controller.launch.xml  load_joint_position_controllers.launch  load_joint_trajectory_controllers.launch  load_position_joint_trajectory_controller.launch.xml  load_position_joint_trajectory_controllers.launch  load_position_joint_trajectory_controllers.launch.xml  panda.rviz  panda_openai_sim.launch  panda_rviz.launch  panda_rviz.launch.xml  put_robot_in_world.launch  start.launch  start_grasp_world.launch  start_pick_and_place_world.launch  start_push_world.launch  start_reach_world.launch  start_simulation.launch  start_slide_world.launch  start_world.launch  start_world.launch.xml  test_panda_control.launch  test_panda_moveit.launch
panda_gazebo/manual/: panda_control_server_test.py  panda_task_env_test.py
panda_gazebo/msg/: BoundingRegion.msg
panda_gazebo/nodes/: panda_control_server.py  panda_moveit_server.py
panda_gazebo/requirements/: dev_requirements.txt  doc_requirements.txt  docs_requirements.txt  requirements.txt
panda_gazebo/resources/documents/: controller_start_commands.md  geometrical_calculation.md  joint_trajectory_control_msg_examples.md  max_effort_calculations.md
panda_gazebo/resources/tools/: inertia_calculator.py  inertia_mass_calculator.py  inertial_xml_marker.py  panda_effort_control_tester.py  panda_effort_controller_test.py  (+1 more)
panda_gazebo/scripts/: joint_effort_dynamic_reconfigure_server.py  joint_efforts_dynamic_reconfigure_server.py  joint_position_dynamic_reconfigure_server.py  joint_positions_dynamic_reconfigure_server.py  set_franka_gazebo_logging_level.py  set_franka_gripper_logging_level.py  set_logging_level.py
panda_gazebo/src/: panda_joint_locker_world_plugin.cpp
panda_gazebo/srv/: AddBox.srv  AddPlane.srv  GetControlledJoints.srv  GetEe.srv  GetEePose.srv  GetEePoseJointConfig.srv  GetEeRpy.srv  GetMoveItControlledJoints.srv  GetRandomEePose.srv  GetRandomJointPositions.srv  ListControlType.srv  LockJoints.srv  SetEe.srv  SetEePose.srv  SetGripperWidth.srv  SetJointCommands.srv  SetJointEfforts.srv  SetJointPositions.srv  SwitchControlType.srv
(+755 files in other folders)
